--- a/LoLApp/src/main/res/values/strings.xml
+++ b/LoLApp/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Titles and shit-->
     <string name="app_name">LoLApp</string>
     <string name="title_section1">Home</string>
     <string name="title_section2">Champions</string>
@@ -14,5 +15,19 @@
     <string name="action_example">Timers</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_create_user">Create User</string>
+    <string name="title_activity_create_user">Create User</string>
+    <string name="title_activity_login">Login</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email (optional)</string>
+    <string name="prompt_password">Password</string>
+    <string name="btn_sign_in">Sign in</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="et_create_user">User Name</string>
 
 </resources>
